# arithmetic

./: README.md  env_installation.md  pyproject.toml
src/arithmetic/: __init__.py  functions.py
src/arithmetic_valmiki/: __init__.py  functions.py  utils.py
